--- a/overlay/frameworks/base/core/res/res/xml-mcc310-mnc004/eri.xml
+++ b/overlay/frameworks/base/core/res/res/xml-mcc310-mnc004/eri.xml
@@ -23,9 +23,9 @@
     <CallPromptId Id="1" CallPromptText="CallPromptId1" />
     <CallPromptId Id="2" CallPromptText="CallPromptId2" />
     <EriInfo RoamingIndicator="0" IconIndex="0" IconMode="0" EriText="" CallPromptId="0" AlertId="0" />
-    <EriInfo RoamingIndicator="1" IconIndex="1" IconMode="0" EriText="Boost Mobile" CallPromptId="0" AlertId="0" />
+    <EriInfo RoamingIndicator="1" IconIndex="1" IconMode="0" EriText="Verizon Wireless" CallPromptId="0" AlertId="0" />
     <EriInfo RoamingIndicator="2" IconIndex="2" IconMode="1" EriText="" CallPromptId="0" AlertId="0" />
-    <EriInfo RoamingIndicator="64" IconIndex="1" IconMode="0" EriText="Boost Mobile" CallPromptId="0" AlertId="0" />
+    <EriInfo RoamingIndicator="64" IconIndex="1" IconMode="0" EriText="Verizon Wireless" CallPromptId="0" AlertId="0" />
     <EriInfo RoamingIndicator="65" IconIndex="65" IconMode="0" EriText="Network Extender" CallPromptId="0" AlertId="0" />
     <EriInfo RoamingIndicator="66" IconIndex="1" IconMode="0" EriText="Extended Network" CallPromptId="0" AlertId="0" />
     <EriInfo RoamingIndicator="67" IconIndex="67" IconMode="0" EriText="Extended Network" CallPromptId="0" AlertId="0" />
@@ -37,8 +37,8 @@
     <EriInfo RoamingIndicator="73" IconIndex="73" IconMode="0" EriText="Roaming" CallPromptId="0" AlertId="0" />
     <EriInfo RoamingIndicator="74" IconIndex="2" IconMode="1" EriText="Extended Network" CallPromptId="0" AlertId="0" />
     <EriInfo RoamingIndicator="75" IconIndex="2" IconMode="1" EriText="Roaming" CallPromptId="0" AlertId="0" />
-    <EriInfo RoamingIndicator="76" IconIndex="76" IconMode="0" EriText="Boost Mobile" CallPromptId="0" AlertId="0" />
-    <EriInfo RoamingIndicator="77" IconIndex="2" IconMode="1" EriText="Boost Mobile" CallPromptId="0" AlertId="0" />
+    <EriInfo RoamingIndicator="76" IconIndex="76" IconMode="0" EriText="Verizon Wireless" CallPromptId="0" AlertId="0" />
+    <EriInfo RoamingIndicator="77" IconIndex="2" IconMode="1" EriText="Verizon Wireless" CallPromptId="0" AlertId="0" />
     <EriInfo RoamingIndicator="78" IconIndex="1" IconMode="0" EriText="Network Extender" CallPromptId="0" AlertId="0" />
     <EriInfo RoamingIndicator="79" IconIndex="2" IconMode="1" EriText="Network Extender" CallPromptId="0" AlertId="0" />
 </EriFile>
