--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -222,8 +222,8 @@
     <!-- Component name of the geofence services provider. >
     <string name="config_geofenceServicesProvider" translatable="false">com.motorola.motgeofencesvc</string-->
 
-    <!-- Component name of the combo network location provider. -->
-    <string name="config_comboNetworkLocationProvider" translatable="false">com.qualcomm.location</string>
+    <!-- Component name of the combo network location provider. >
+    <string name="config_comboNetworkLocationProvider" translatable="false">com.qualcomm.location</string-->
 
 
     <!-- Screen brightness used to dim the screen while dozing in a very low power state.
