surnia: Enable proximitywake
Change-Id: I7b8e99d92cf3a775ad09a2b779d3f0db44f01373
Signed-off-by: Josue Rivera <prbassplayer@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -48,4 +48,9 @@
         <item>15</item>
     </integer-array>
 
+    <!-- Default value for proximity check on screen wake
+         NOTE ! - Enable for devices that have a fast response proximity sensor (ideally < 300ms)
+    -->
+    <bool name="config_proximityCheckOnWake">true</bool>
+
 </resources>
